--- a/details.html
+++ b/details.html
@@ -3,25 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emulateur wifi</title>
+    <title>Détails du Projet</title>
+    <link rel="stylesheet" href="style.css/style.css">
 </head>
 <body>
-
+    <div class="container"></div>
     <header>
+    <nav>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="details.html">Détails Techniques</a></li>.
+    </nav>
         <h1>
-            emulateur wifi
+            HotSpot
         </h1>
     </header>
-         <nav>
-
-        </nav>
+    </div>
+    <nav>
+        <ul class="menu">
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="details.html">Détails Techniques</a></li>.
+        </ul>
+    </nav>
     <main>
-        <section>
-            <h2>presentation projet</h2>
-        </section>
+        <h2>
+           Matériel Nécessaire
+        </h2>
+        <p>
+            avoir accès aux informations des personnes pour pouvoir sensibiliser la population au danger des réseaux publiques
+        </p>
+         <ul class="menu">
+            <li>RaspBerry</li>
+            <li>Un ordinateur</li>
+            <li>Un script réaliser par nos soins</li>
+        </ul>
+        <ol>
+            <li>émuler un wifi</li>
+            <li>récuperer les informations de l'utilisateur</li>
+            <li>y avoir accès et pouvoir les stocker dans un bloc note</li>
+        </ol>
+        <img src="shemahotspot.png" width=500" height="300"alt="voici une petite photo d'un raspBerry">
     </main>
+    <div class="container">
     <footer>
-        <p>projet realiser par segura raffael</p>
+        <p>
+            Projet réaliser par Maxime Camille et Raffael
+        </p>
     </footer>
+    </div>
 </body>
-</html>
