--- a/index.html
+++ b/index.html
@@ -3,25 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emulateur wifi</title>
+    <title>Emulateur wifi avec RaspBerry Pi</title>
+    <link rel="stylesheet" href="style.css/style.css">
 </head>
 <body>
-
+    <div class="container">
     <header>
         <h1>
-            emulateur wifi
+            Chef d'oeuvre première
         </h1>
+    <nav>
+        <ul class="menu">
+            <li class="lien"><a href="index.html">Accueil</a></li> 
+            <li class="lien"><a href="details.html">Détails Techniques</a></li>
+            <li class="lien"><a href="contact.html">contacts</a></li>
+            <li class="lien"><a href="test.html">shema du projet</a></li>
+        </ul>
+    </nav>
     </header>
-         <nav>
-
-        </nav>
+    </div>
     <main>
-        <section>
-            <h2>presentation projet</h2>
-        </section>
+        <h2>
+            notre projet consiste a faire passer un wifi publique dans un RaspBerry et ensuite l'émuler pour que nous ayons accès aux mails et site visiter par les personnes s'y connectant 
+        </h2>
+        <p>
+            avoir accès aux informations des personnes pour pouvoir sensibiliser la population au danger des réseaux publiques
+        </p>
     </main>
+    <div class="container">
     <footer>
-        <p>projet realiser par segura raffael</p>
+        <p>
+            Projet réaliser par Maxime Camille et Raffael
+        </p>
     </footer>
+    </div>
 </body>
 </html>
